--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "concurrently \"npm run client\" \"npm start\" "
   },
   "dependencies": {
+    "@angular-devkit/build-angular": "^12.0.3",
     "concurrently": "^6.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
