--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@angular-devkit/build-angular": "^12.0.3",
+    "@angular/compiler": "^10.2.5",
+    "@angular/compiler-cli": "^10.2.5",
     "concurrently": "^6.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -20,6 +22,7 @@
     "node-downloader-helper": "^1.0.18",
     "node-fetch": "^2.6.1",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "typescript": "^4.3.2"
   }
 }
