--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "client": "npm start --prefix client",
-    "server": "nodemon ./bin/www",
+    "server": "node ./bin/www",
     "dev": "concurrently \"npm run client\" \"npm start\" "
   },
   "dependencies": {
